AX: [macOS] When zoom is enabled, focus doesn't follow text cursor https://bugs.webkit.org/show_bug.cgi?id=186697

Reviewed by Darin Adler.

Now that web process doesn't have access to NSScreen. The conversion of the
rects is wrong. Fixed this by using the right function that's available in
WebCore to get the rects.

* editing/mac/FrameSelectionMac.mm:
(WebCore::accessibilityConvertScreenRect):


Canonical link: https://commits.webkit.org/202047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232944 268f45cc-cd09-0410-ab3c-d52691b4dbfc